Fixed dark mode css editor

--- a/src/styles/SCSS/_media.scss
+++ b/src/styles/SCSS/_media.scss
@@ -60,7 +60,8 @@
 			border-bottom: 1px solid #3f3f41;
 		}
 
-		input[type='text'] {
+		input[type='text'],
+		#cssEditor {
 			background-color: #39383d;
 			color: $purewhite;
 		}
