--- a/src/styles/SCSS/style.scss
+++ b/src/styles/SCSS/style.scss
@@ -515,6 +515,10 @@
 		display: none;
 	}
 
+	#i_collection {
+		width: 100px;
+	}
+
 	#fileContainer {
 		overflow: hidden;
 		position: relative;
